[package]

name = "sof-secp256k1"
version = "0.5.7"
authors = [ "Dawid Ciężarkiewicz <dpc@ucore.info>",
            "Andrew Poelstra <apoelstra@wpsoftware.net>" ]
license = "CC0-1.0"
homepage = "https://github.com/susytech/susy-secp256k1/"
repository = "https://github.com/susytech/susy-secp256k1/"
documentation = "https://www.wpsoftware.net/rustdoc/secp256k1/"
description = "Fork of Rust bindings for Pieter Wuille's `libsecp256k1` library. Implements ECDSA for the SECG elliptic curve group secp256k1 and related utilities."
keywords = [ "crypto", "ECDSA", "secp256k1", "libsecp256k1", "bitcoin" ]
readme = "README.md"

build = "build.rs"
[build-dependencies]
cc = {version="1.0",registry="susytech"}
cfg-if = {version="0.1",registry="susytech"}

[lib]
name = "secp256k1"
path = "src/lib.rs"

[features]
unstable = []
default = []
dev = []

[dependencies]
arrayvec = {version="0.4",registry="susytech"}
rand = {version="0.4",registry="susytech"}

[dev-dependencies]
hex = {version="0.3.1",registry="susytech"}
